Fix address bar not hiding on mobile when scrolling the page.
+ Change the warning color in bootstrap to orange.
+ Change deadline color based on time remaining.

--- a/PortalTeme/ClientApp/src/sass/bootstrap-material-indigo.scss
+++ b/PortalTeme/ClientApp/src/sass/bootstrap-material-indigo.scss
@@ -6,7 +6,7 @@ $theme-colors: map-merge((
   primary: $purple,
   success: $green-a200,
   info: $light-blue,
-  warning: $deep-orange,
+  warning: $orange,
   danger: $red,
   light: $grey-100,
   dark: $grey-800
